--- a/package.json
+++ b/package.json
@@ -19,8 +19,11 @@
         "@fortawesome/fontawesome-svg-core": "1.2.8",
         "@fortawesome/free-solid-svg-icons": "5.5.0",
         "@ng-bootstrap/ng-bootstrap": "4.0.0",
+        "@types/jquery": "^3.3.29",
+        "angular-screenfull": "^1.0.0",
         "bootstrap": "4.1.3",
         "core-js": "2.5.7",
+        "jquery": "^3.3.1",
         "moment": "2.22.2",
         "ng-jhipster": "0.5.6",
         "ngx-cookie": "2.0.1",
@@ -62,9 +65,12 @@
         "mini-css-extract-plugin": "0.4.5",
         "moment-locales-webpack-plugin": "1.0.7",
         "optimize-css-assets-webpack-plugin": "5.0.1",
+        "postcss-loader": "3.0.0",
         "prettier": "1.15.2",
         "reflect-metadata": "0.1.12",
         "rimraf": "2.6.2",
+        "sass": "1.15.1",
+        "sass-loader": "7.1.0",
         "simple-progress-webpack-plugin": "1.1.2",
         "style-loader": "0.23.1",
         "terser-webpack-plugin": "1.1.0",
@@ -75,10 +81,6 @@
         "tslint-config-prettier": "1.16.0",
         "tslint-loader": "3.6.0",
         "typescript": "3.1.6",
-        "sass": "1.15.1",
-        "sass-loader": "7.1.0",
-        "postcss-loader": "3.0.0",
-        "xml2js": "0.4.19",
         "webpack": "4.26.0",
         "webpack-cli": "3.1.2",
         "webpack-dev-server": "3.1.10",
@@ -86,7 +88,8 @@
         "webpack-notifier": "1.7.0",
         "webpack-visualizer-plugin": "0.1.11",
         "workbox-webpack-plugin": "3.6.3",
-        "write-file-webpack-plugin": "4.5.0"
+        "write-file-webpack-plugin": "4.5.0",
+        "xml2js": "0.4.19"
     },
     "engines": {
         "node": ">=8.9.0"
