--- a/src/main/resources/.h2.server.properties
+++ b/src/main/resources/.h2.server.properties
@@ -1,4 +1,5 @@
 #H2 Server Properties
+#Wed Feb 13 21:55:38 CET 2019
 0=JHipster H2 (Disk)|org.h2.Driver|jdbc\:h2\:file\:./target/h2db/db/hackatonleaderboard|HackatonLeaderboard
 webAllowOthers=true
 webPort=8082
