--- a/src/main/docker/app.yml
+++ b/src/main/docker/app.yml
@@ -1,7 +1,7 @@
 version: '2'
 services:
     hackatonleaderboard-app:
-        image: hackatonleaderboard
+        image: noussdockerregistry.azurecr.io/nouss/lab/hackatonleaderboard
         environment:
             - _JAVA_OPTIONS=-Xmx512m -Xms256m
             - SPRING_PROFILES_ACTIVE=prod,swagger
